Don't switch to the same editor tab again

If we do, we're converting the contents of the other tab to the current tab,
and reverting all changes we've made (even if we saved).

BUG:424213